# tf-out

./: .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  .yamllint.yml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
config/: settings.yaml  wif_config.example.json
docs/: IMPORT_REVIEW.md  RESOURCE_COVERAGE.md  architecture.md  governance.md  runbook.md
docs/boundaries/: README.md  classification_agent.yaml  dependency_agent.yaml  discovery_agent.yaml  governance_agent.yaml  reasoning_bank_agent.yaml  terraform_agent.yaml  validation_agent.yaml
docs/governance/: AGENT_GOVERNANCE_FRAMEWORK.md  GAP_ANALYSIS.md
examples/: sample_discovery.json
scripts/: run_pipeline.sh
sidecar/: .gitignore  README.md  package.json  server.mjs
src/: __init__.py  main.py  settings.py
src/agents/: __init__.py  adk_bridge.py  classification_agent.py  dependency_agent.py  discovery_agent.py  governance_agent.py  orchestrator.py  reasoning_bank_agent.py  terraform_agent.py  validation_agent.py
src/auth/: __init__.py  credentials.py  wif.py
src/core/: __init__.py  agent_trace.py  filters.py  tool_governor.py
src/discovery/: __init__.py  cai_client.py  classifiers.py  models.py
src/generation/: __init__.py  hcl_writer.py  naming.py
src/generation/templates/: compute.tf.j2  iam.tf.j2  networking.tf.j2  project.tf.j2  provider.tf.j2
src/governance/: __init__.py  audit.py  hitl.py  kill_switch.py  policies.py
src/graph/: __init__.py  dependency.py
src/mcp/: __init__.py  tools.py
src/memory/: __init__.py  agentdb_client.py  reasoning_bank.py
src/validation/: __init__.py  runner.py  sandbox.py
tests/: conftest.py  test_adk_bridge.py  test_agent_trace.py  test_agentdb_client.py  test_audit_chain.py  test_cai_client.py  test_classification.py  test_filters.py  test_generation.py  test_governance.py  test_graph.py  test_hcl_writer_fmt.py  test_hitl_tokens.py  test_kill_switch.py  test_naming.py  test_reasoning_bank.py  test_registry_coverage.py  test_tool_governor.py
