[project]
name = "tf-out"
version = "0.1.0"
description = "Google ADK agentic system for GCP discovery and Terraform generation"
requires-python = ">=3.13"
dependencies = [
    # Google ADK went 0.x → 1.x; 1.31+ is the stable LlmAgent/FunctionTool surface we use.
    "google-adk>=1.31",
    "google-cloud-asset>=4.3",
    "google-cloud-resource-manager>=1.17",
    "google-auth>=2.49",
    "google-api-python-client>=2.194",
    "jinja2>=3.1.6",
    "networkx>=3.6",
    "pydantic>=2.13",
    "pyyaml>=6.0.3",
    "typer>=0.24",
    "rich>=15.0",
]

[project.scripts]
tf-out = "src.main:app"

# PEP 735 dependency groups — uv's preferred location for non-extra dev deps.
# Installed by `uv sync` by default; skip with `uv sync --no-dev`.
[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.15",
    "pre-commit>=4.0",
]

[tool.uv]
# Keep the project itself installed editable when syncing.
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [
    ".venv",
    "generated-terraform",
    "audit-logs",
    ".claude",
    ".claude-flow",
    ".swarm",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "S",    # bandit (security)
    "N",    # pep8-naming
]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # assert used — fine in tests
    "B008",   # function calls in default args (typer patterns)
    "S603",   # subprocess without shell — we sanitize inputs
    "S607",   # partial executable path — intended for PATH resolution
    "S310",   # URL open — scheme is validated at the call site
    "S105",   # "password" false-positives on env-var *names* (e.g. ENV_TOKEN)
    "N818",   # exception names — codebase convention is noun phrases (ChainBroken, SandboxViolation)
    "UP042",  # str + Enum mixin is an intentional serialization pattern
    "RUF002", # en/em-dashes in docstrings are intentional
    "SIM103", # "return cond" vs explicit branches — readability over brevity
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S",      # assert / hardcoded fixtures are intentional in tests
    "N",      # naming looser in tests
    "E741",   # `l` variable names occur in throwaway comprehensions
    "F821",   # forward references in type hints under TYPE_CHECKING
    "SIM117", # nested `with` used deliberately for clarity in fixtures
    "RUF005", # list concat is more readable in small tests
    "RUF012", # mutable class defaults are fine in test stubs
]
"scripts/**/*.py" = ["S"]
"src/main.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
